[package]
name = "weave"
version = "0.3.1"
authors = ["James Wilson <james@jsdw.me>"]
edition = "2018"

[dependencies]
hyper = "0.13.0-alpha.4"
hyper-tls = "0.4.0-alpha.4"
tokio = "0.2.0-alpha.6"
futures-util = "0.3.1"
mime_guess = "2.0.1"
clap = "2.33.0"
url = "2.1.0"
colored = "1.8"
env_logger = "0.7.0"
log = "0.4.8"
regex = "1"
lazy_static = "1"