[package]
name = "weave"
version = "0.5.1"
authors = ["James Wilson <james@jsdw.me>"]
edition = "2018"

[dependencies]
hyper = "0.13.1"
hyper-tls = "0.4.0"
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3.1"
mime_guess = "2.0.1"
clap = "2.33.0"
url = "2.1.0"
colored = "1.8"
env_logger = "0.7.0"
log = "0.4.8"
regex = "1"
lazy_static = "1"